--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-
     tools:context=".MainActivity"
     android:orientation="vertical">
 
@@ -15,6 +13,7 @@
         android:layout_height="90dp"
         android:hint="Result"
         android:textSize="30sp"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -162,11 +161,10 @@
             android:textSize="30sp"/>
         <Button
             android:id="@+id/dot"
-
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:text="."
-            android:onClick="onOperationClick"
+            android:onClick="onNumberClick"
 
             android:textSize="30sp"/>
         <Button
