--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -45,12 +45,10 @@
                 android:id="@+id/seven"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:layout_weight="2"
                 android:text="7"
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
 
                 android:id="@+id/eight"
                 android:layout_width="wrap_content"
@@ -59,7 +57,6 @@
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
 
                 android:id="@+id/nine"
                 android:layout_width="wrap_content"
@@ -68,7 +65,6 @@
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
 
                 android:id="@+id/multiply"
                 android:layout_width="wrap_content"
@@ -86,7 +82,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
-                android:layout_weight="2"
 
                 android:id="@+id/six"
                 android:layout_width="wrap_content"
@@ -95,7 +90,6 @@
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
 
                 android:id="@+id/five"
 
@@ -105,7 +99,6 @@
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
 
                 android:id="@+id/four"
                 android:layout_width="wrap_content"
@@ -113,11 +106,8 @@
                 android:text="4"
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
-            <Button                android:layout_weight="2"
-
-
+            <Button
                 android:id="@+id/plus"
-
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:text="+"
@@ -127,9 +117,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <Button                android:layout_weight="2"
-
-
+            <Button
                 android:id="@+id/three"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
@@ -137,8 +125,6 @@
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
-
                 android:id="@+id/two"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
@@ -146,8 +132,6 @@
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
-
                 android:id="@+id/one"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
@@ -155,8 +139,6 @@
                 android:onClick="onNumberClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
-
                 android:id="@+id/minus"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
@@ -170,8 +152,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
-                android:layout_weight="2"
-
                 android:id="@+id/division"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
@@ -179,35 +159,25 @@
                 android:onClick="onOperationClick"
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
-
                 android:id="@+id/zero"
-
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:text="0"
                 android:onClick="onNumberClick"
-
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
-
                 android:id="@+id/dot"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:text="."
                 android:onClick="onNumberClick"
-
                 android:textSize="30sp"/>
             <Button
-                android:layout_weight="2"
-
                 android:id="@+id/equal"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:text="="
                 android:onClick="onOperationClick"
-
                 android:textSize="30sp"/>
 
 
